#20892 updating docker, removing dockerize